fixing up list grid spacing right

--- a/app/stylesheets/grid-row-layout.less
+++ b/app/stylesheets/grid-row-layout.less
@@ -3,6 +3,10 @@
     width: 100%;
     border-bottom: 1px dotted lightgray;
   }
+  .non-resizable-container{
+    width:100%;
+
+  }
   .content-item-container-resizable{
     height: 100%;
   }
