--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7581,9 +7581,6 @@ a:hover {
 .Sub-list-item-group-border {
   margin-bottom: 40px;
 }
-.List-Grid-Group-Column-Small-Edit {
-  width: 47%;
-}
 .List-Grid-Row-Edit {
   padding-left: 19%;
 }
@@ -7651,6 +7648,36 @@ a:hover {
 }
 .List-Grid-Template .Content-image-input-container {
   width: 64%;
+}
+.Content-item {
+  max-width: 253px;
+}
+.List-Grid-Template .list-grid-row-container {
+  display: inline-block;
+  width: 35%;
+}
+.List-Grid-Template .List-Grid-Row-Edit .List-Grid-Group-Column-Small-Edit {
+  width: 100%;
+}
+.List-Grid-Template .List-Grid-Row-Edit .List-Grid-Group-Column-Content-Item .grid-row-layout {
+  width: 100%;
+}
+.List-Grid-Template .List-Grid-Row-Edit .List-Grid-Group-Column-Content-Item .grid-row-layout .resizable-container {
+  border-right: none;
+  border-bottom: 1px dotted lightgray;
+  padding: 5px;
+}
+.List-Grid-Template .List-Grid-Row-Edit .grid-row-layout {
+  display: inline-block;
+}
+.List-Grid-Template .List-Grid-Row-Edit .grid-row-layout .resizable-container {
+  border-right: 1px dotted lightgray;
+  border-bottom: none;
+  padding: 5px;
+}
+.List-Grid-Template .List-Page-Read-Only .List-Grid-Row .grid-row-layout {
+  display: inline-block;
+  width: 35%;
 }
 .Content-long-description-container {
   display: inline-block;
@@ -9527,6 +9554,9 @@ body .ui-tooltip {
 .grid-row-layout .resizable-container {
   width: 100%;
   border-bottom: 1px dotted lightgray;
+}
+.grid-row-layout .non-resizable-container {
+  width: 100%;
 }
 .grid-row-layout .content-item-container-resizable {
   height: 100%;
